fix: update image file extensions and improve loader visibility handling

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -5,7 +5,7 @@ $blue: #0065a9;
 .header {
   position: absolute;
   display: flex;
-  z-index: 9;
+  z-index: 2;
   top: 0;
   padding: 35px;
   justify-content: space-between;
@@ -99,14 +99,14 @@ $blue: #0065a9;
       &:hover {
         .indicator {
           transform: scale(1) translateX(-50%);
-          background-color: $black;
+          background-color: #141516;
         }
       }
 
       &.active {
         .indicator {
           transform: scale(1) translateX(-50%);
-          background-color: $black;
+          background-color: #141516;
         }
       }
 
@@ -116,7 +116,7 @@ $blue: #0065a9;
         height: 7px;
         top: 45px;
         left: 50%;
-        background-color: grey;
+        background-color: #141516;
         border-radius: 50%;
         transform: scale(0) translateX(-50%);
         transition: all 0.2s cubic-bezier(0.76, 0, 0.24, 1);
